# VOXAGENT

./: .env.example  .gitignore  4.20任务_本地全链路部署.md  INTERVIEW_BRIEF.md  PROJECT_OVERVIEW.md  RAG_Agent_语音智能客服_业务体系设计.docx  README.md  RUNTIME_GUIDE.md  SECURITY_REMINDER.md  V1.0.0_全链路低延迟Debug文档.md  V1.0_智能客服系统架构评审与迭代优化白皮书.md  V2.0_本地语音部署与API集成方案.md  VoiceAgentRAG_技术架构说明书.md  asr_tts_voice_cloning_overview.html  bench_tts.py  pyproject.toml  项目Pipeline与抽象层学习文档.md  项目书_语音智能客服系统实施方案.md
data/faiss_index/: index.faiss  metadata.json
examples/: benchmark.py  business_cli.py  business_mcp_server.py  cli_demo.py  customer_service_demo.py  ingest_documents.py  voice_demo.py
info/: CONTRIBUTING.md
knowledge_base/: 01_company_overview.txt  02_product_features.txt  03_pricing_plans.txt  04_api_overview.txt  05_api_contacts.txt  06_api_deals.txt  07_integrations.txt  08_security.txt  09_onboarding.txt  10_troubleshooting.txt  11_faq.txt  12_release_notes.txt
logs/sessions/: 20260419_7e8a521c.jsonl  20260419_8aceaae9.jsonl  (+28 more)
tests/: V1_Unit_Test_Validation_Report.md  bench_rag_match.py  conftest.py  test_auto_qa.py  test_base_tool.py  test_business_scope.py  test_cosyvoice.py  test_domain_agent.py  test_domain_router.py  test_emotion_detector.py  test_fast_talker.py  test_function_calling_agent.py  test_hybrid_retriever.py  test_integration.py  test_intent_router.py  test_kb_manager.py  test_llm_tracing.py  test_mcp_server.py  test_memory_manager.py  test_memory_router.py  test_permission_guard.py  test_react_agent.py  test_semantic_cache.py  test_sensevoice_stt.py  test_session.py  test_session_logger.py  test_skill_registry.py  test_slow_thinker.py  test_streaming_stt.py  test_task_state_machine.py  test_tools.py  test_transfer_policy.py  test_vector_store.py
voice_optimized_rag/: __init__.py  config.py  mcp_server.py
web/: server.py
(+57 files in other folders)
